--- a/css/styles.css
+++ b/css/styles.css
@@ -16,12 +16,63 @@
   --logo-color: #000000;
   --foot-text-color: rgba(255, 255, 255, 0.6);
 }
+html {
+  box-sizing: border-box;
+}
+*,
+*::after,
+*::before {
+  box-sizing: inherit;
+}
+/* Стили для обнуления верхних отступов у элементов */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+/* Класс для обнуления базовых свойств у списков (ul) */
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+/* Класс для обнуления базовых свойств у ссылок */
+a {
+  text-decoration: none;
+  color: inherit;
+}
+/* Свойства для корректного отображения картинок */
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
 body {
   background-color: var(--basic-white);
   color: var(--primary-text-color);
   font-family: Roboto, sans-serif;
   font-size: 14px;
   letter-spacing: 0.03em;
+}
+header {
+  border-bottom: 1px solid #ececec;
+}
+.header,
+.main-nav {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 .list {
   list-style: none;
@@ -37,7 +88,18 @@ body {
   color: var(--accent-color);
 }
 /* site-nav */
+.site-nav {
+  display: flex;
+  margin-left: 93px;
+}
+.site-nav .item + .item {
+  margin-left: 50px;
+}
 .site-nav .link {
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
+
   color: var(--primary-text-color);
   font-weight: 500;
   line-height: 1.14;
@@ -50,6 +112,13 @@ body {
 }
 .site-nav .link.current {
   color: var(--accent-color);
+}
+.contacts {
+  display: flex;
+  margin-left: auto;
+}
+.contacts .item + .item {
+  margin-left: 50px;
 }
 .contacts .link {
   color: var(--second-text-color);
@@ -68,8 +137,11 @@ body {
 /* Hero */
 .hero {
   background-color: var(--hero-footer-background-color);
+  text-align: center;
 }
 .hero-title {
+  margin-bottom: 30px;
+
   color: var(--basic-white);
   font-weight: 900;
   font-size: 44px;
@@ -79,10 +151,22 @@ body {
   text-transform: uppercase;
 }
 /* Features */
+.features-list {
+  display: flex;
+  flex-wrap: wrap;
+}
+.features-list .item {
+  width: 270px;
+  margin-right: 30px;
+}
+.features-list .item:last-child {
+  margin-right: 0;
+}
 .features-list .title {
   font-size: 14px;
   line-height: 1.14;
   text-transform: uppercase;
+  margin-bottom: 10px;
 }
 .features-list .text {
   color: var(--second-text-color);
@@ -101,16 +185,46 @@ body {
   overflow: hidden;
 }
 /* Section */
+.section,
+.section-team {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+.section.work {
+  padding-top: 0;
+}
 .section-title {
   font-size: 36px;
   line-height: 1.2;
   text-align: center;
+  padding-bottom: 50px;
+  margin: 0;
+}
+.work-list {
+  display: flex;
+}
+.work-list .item {
+  margin-right: 30px;
+}
+.work-list .item:last-child {
+  margin-right: 0;
 }
 /* Team */
+.team-list {
+  display: flex;
+}
+.team-list .item {
+  margin-right: 30px;
+}
+.team-list .item:last-child {
+  margin-right: 0;
+}
 .section-team {
   background-color: var(--second-background-color);
 }
 .team-list .title {
+  margin-top: 30px;
+  margin-bottom: 10px;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
@@ -123,9 +237,46 @@ body {
   text-align: center;
 }
 /* Portfolio */
+.button-list {
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 50px;
+  justify-content: center;
+}
+.button-list .button {
+  padding: 6px 22px;
+  border: none;
+}
+.button-list .item {
+  margin-right: 8px;
+}
+.button-list .item:last-child {
+  margin-right: 0;
+}
 .button.current {
   color: var(--basic-white);
   background-color: var(--accent-color);
+}
+.portfolio-list {
+  display: flex;
+  flex-wrap: wrap;
+}
+.portfolio-list .item {
+  width: 370px;
+  margin-right: 30px;
+  margin-bottom: 30px;
+}
+.portfolio-list .item:nth-child(3n) {
+  margin-right: 0;
+}
+.portfolio-list .item:nth-last-child(-n + 3) {
+  margin-bottom: 0;
+}
+.portfolio-border {
+  border: 1px solid #eeeeee;
+  border-top: transparent;
+  padding: 20px 24px;
+  min-width: 322px;
 }
 .portfolio-list .title {
   font-size: 18px;
@@ -141,19 +292,29 @@ body {
 footer {
   background-color: var(--hero-footer-background-color);
 }
+address {
+  display: block;
+  padding-top: 20px;
+  padding-bottom: 60px;
+}
 footer .logo {
+  display: block;
+  padding-top: 60px;
   color: var(--basic-white);
+}
+.foot-list .item {
+  margin-top: 9px;
 }
 .foot-list .address {
   color: var(--basic-white);
   font-style: normal;
-  line-height: 1.71;
+  line-height: 1.5;
   text-decoration: none;
 }
 .foot-list .link {
   color: var(--foot-text-color);
   font-style: normal;
-  line-height: 1.71;
+  line-height: 1.5;
   text-decoration: none;
 }
 .foot-list .link:hover,
@@ -164,6 +325,7 @@ footer .logo {
 .button {
   background-color: var(--second-background-color);
   cursor: pointer;
+  border-radius: 4px;
 }
 .button:hover,
 .button:focus {
@@ -173,4 +335,7 @@ footer .logo {
 .button.primary {
   color: var(--basic-white);
   background-color: var(--accent-color);
+  padding: 10px 32px;
+  min-width: 216px;
+  border: 1px solid transparent;
 }
