--- a/css/styles.css
+++ b/css/styles.css
@@ -140,6 +140,9 @@ header {
   text-align: center;
 }
 .hero-title {
+  width: 696px;
+  margin-left: auto;
+  margin-right: auto;
   margin-bottom: 30px;
 
   color: var(--basic-white);
@@ -190,6 +193,9 @@ header {
   padding-top: 94px;
   padding-bottom: 94px;
 }
+.section.hero {
+  padding: 200px 0;
+}
 .section.work {
   padding-top: 0;
 }
@@ -219,11 +225,13 @@ header {
 .team-list .item:last-child {
   margin-right: 0;
 }
+.team-border {
+  padding: 30px 0;
+}
 .section-team {
   background-color: var(--second-background-color);
 }
 .team-list .title {
-  margin-top: 30px;
   margin-bottom: 10px;
   font-weight: 500;
   font-size: 16px;
@@ -244,8 +252,10 @@ header {
   justify-content: center;
 }
 .button-list .button {
+  min-height: 38px;
   padding: 6px 22px;
-  border: none;
+  border: 1px solid transparent;
+  font-weight: 500;
 }
 .button-list .item {
   margin-right: 8px;
@@ -279,6 +289,7 @@ header {
   min-width: 322px;
 }
 .portfolio-list .title {
+  margin-bottom: 4px;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
@@ -290,20 +301,19 @@ header {
 }
 /* Footer */
 footer {
+  padding: 60px 0;
   background-color: var(--hero-footer-background-color);
-}
-address {
-  display: block;
-  padding-top: 20px;
-  padding-bottom: 60px;
 }
 footer .logo {
   display: block;
-  padding-top: 60px;
+  margin-bottom: 20px;
   color: var(--basic-white);
 }
 .foot-list .item {
-  margin-top: 9px;
+  margin-bottom: 9px;
+}
+.foot-list .item:last-child {
+  margin-bottom: 0;
 }
 .foot-list .address {
   color: var(--basic-white);
@@ -333,9 +343,12 @@ footer .logo {
   background-color: var(--accent-color);
 }
 .button.primary {
+  min-width: 216px;
+  min-height: 50px;
+  padding: 10px 32px;
+  border: 1px solid transparent;
+
   color: var(--basic-white);
   background-color: var(--accent-color);
-  padding: 10px 32px;
-  min-width: 216px;
-  border: 1px solid transparent;
+  font-weight: 700;
 }
